--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
                 </div>
                 <div class="hero-image">
                     <!-- Imagen del hero - Puedes cambiar esta URL por tu propia imagen -->
-                    <img src="https://images.unsplash.com/photo-1414235077428-338989a2e8c0?w=800&h=600&fit=crop" 
-                         alt="Mesa de restaurante con platos de comida apetitosos" 
-                         class="hero-img">
+<img src="img/mesa-restaurante.jpg" alt="Mesa de restaurante con platos panameños y limonada" class="hero-img">
                 </div>
             </div>
         </div>
