--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
                 id="chatInput" 
                 placeholder="Escribe tu mensaje..."
                 aria-label="Escribe tu mensaje"
+                maxlength="500"
             >
             <button class="chat-send" id="chatSend" aria-label="Enviar mensaje">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
