--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
             <!-- Los mensajes se cargarán dinámicamente -->
         </div>
         <div class="chat-input-container">
-            <input 
-                type="text" 
-                class="chat-input" 
-                id="chatInput" 
-                placeholder="Escribe tu mensaje..."
-                aria-label="Escribe tu mensaje"
-                maxlength="300"
-            >
+<textarea 
+    class="chat-input" 
+    id="chatInput" 
+    placeholder="Escribe tu mensaje..."
+    aria-label="Escribe tu mensaje"
+    maxlength="500"
+    rows="1"
+></textarea>
             <button class="chat-send" id="chatSend" aria-label="Enviar mensaje">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <line x1="22" y1="2" x2="11" y2="13"></line>
